# ACGN-character-skill

./: .gitignore  README.md  SKILL.md  pyproject.toml  requirements.txt
.humanize/: bitlesson.md
characters/kuchiki-touko/: SKILL.md  meta.json  persona.md  story.md
characters/kuchiki-touko/knowledge/: sources.md  touko_lines.jsonl  touko_lines.md  touko_lines.txt
characters/yuexia/: SKILL.md  meta.json  persona.md  story.md
configs/: README.md
prompts/: correction_handler.md  intake.md  merger.md  persona_analyzer.md  persona_builder.md  story_analyzer.md  story_builder.md
tests/: test_character_assets.py  test_dialogue_filtering.py  test_extract_character_lines.py  test_kuchiki_touko_persona_voice.py  test_ocr_engines.py  test_packaging_docs.py  test_progress_bar.py
tools/: dialogue_extractor.py  event_detector.py  extract_character_lines.py  ocr_engines.py  ocr_fusion.py  output_formatter.py  preprocessing.py  review_ui.py  roi_calibrator.py  roi_config.py  speaker_extractor.py  video_processor.py  video_transcriber.py  work_config.py
tools/configs/: kara_no_shoujo_bilibili_smoke.yaml  kara_no_shoujo_dialogue_bilibili.yaml
yuexia-skill/tools/: dialogue_extractor.py  event_detector.py  ocr_engines.py  roi_calibrator.py  roi_config.py  text_output.py  work_config.py
yuexia-skill/tools/configs/: README.md  yuexia.yaml  yuexia_ep01_roi.yaml
